--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,28 @@
 body {
     background-color:rgb(157, 227, 255);
+    display: grid;
+    grid-template-areas:
+        "header"
+        "photo"
+        "details"
+        "footer";
+
+}
+
+header { 
+    grid-area: header;
+    height: 150px; 
+    
+}
+#photo { 
+    grid-area: photo;
+    height: 700px;
+}
+#details { 
+    grid-area: details;
+    height: 500px;
+}
+footer { 
+    grid-area: footer;
+    height: 150px;
 }
