--- a/css/style.css
+++ b/css/style.css
@@ -3,40 +3,62 @@ main {
     display: grid;
     grid-template-areas:
         "header"
+        "melody"
         "photo"
         "details"
         "footer";
 }
 body{
     margin: 0;
+    background-color:hsl(197, 100%, 81%);
 }
 
 header { 
-    padding-top:20px;
+    padding-top:1vw;
+    padding-bottom:1vw;
     grid-area: header;
     width:100%;
-    height: 100px; 
-    font-family: Georgia, sans-serif;
+    height: 5vw; 
+    font-family: Georgia;
     text-align: center;
     font-weight: bold;
-    font-size: 50pt;
+    font-size: 5vw;
     background-color:hsl(197, 100%, 56%);
     background-image: linear-gradient(hsl(197, 100%, 76%), hsl(197, 100%, 46%));
     border-color: hsl(197, 100%, 56%);
     white-space: nowrap; 
 }
 
+#melody {
+    grid-area:melody;
+    padding-top:5vw;
+    height:13vw;
+}
+
 #photo { 
-    margin-top:125px;
+    margin-top:5vw;
     grid-area: photo;
-    height: 700px;
+    height: 20vw;
     text-align: center;
     
 }
 
 #details { 
     grid-area: details;
-    height: 500px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    border-radius: 5px;
+    background-color: white;
+    width: 75%;
+    transform: translateX(12.5%);
+    text-align: center;
+}
+
+h1.text {
+    font-size: 4vw;
+}
+p.text{
+    text-align:center;
+    font-size: 2vw;
 }
 
 footer { 
